# ComfyUI-googletrans

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yaml
ComfyUI_googletrans/: __init__.py
