[project]
name = "comfyui-googletrans"
description = "NODES:Google Translate"
version = "0.1.1"
license = {text = "MIT License"}
dependencies  = []

[project.urls]
Repository = "https://github.com/sweetndata/ComfyUI-googletrans"

[tool.comfy]
PublisherId = "sweetndata"
DisplayName = "ComfyUI-googletrans"
Icon = ""

[tool.poetry]
name = "comfyui-googletrans"
version = "0.1.1"
description = ""
authors = ["Dave Choi <dave.dev@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
googletrans-py = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
